# epd-waveshare

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  License.md  README.md  codecov.yml  tags
.github/: auto_assign-issues.yml  auto_assign.yml  dependabot.yml
.github/workflows/: rust.yml
examples/: Readme.md  epd1in54_no_graphics.rs  epd2in13_v2.rs  epd2in13bc.rs  epd2in13bc_v3.rs  epd4in2.rs  epd4in2_variable_size.rs  epd7in5_v2.rs
examples/assets/: ferris.raw
examples/embedded_linux/: Cargo.toml
examples/embedded_linux/src/: main.rs
examples/embedded_linux_epd1in54/: Cargo.toml
examples/embedded_linux_epd1in54/src/: main.rs
examples/embedded_linux_epd2in9/: Cargo.toml
examples/embedded_linux_epd2in9/src/: main.rs
examples/embedded_linux_epd4in2/: Cargo.toml
examples/embedded_linux_epd4in2/src/: main.rs
examples/epd1in54_full/: Cargo.toml
examples/epd1in54_full/src/: main.rs
examples/epd1in54_no_graphics/: Cargo.toml
examples/epd1in54_no_graphics/src/: main.rs
examples/epd2in9_full/: Cargo.toml
examples/epd2in9_full/src/: main.rs
examples/epd4in2_full/: Cargo.toml
examples/epd4in2_full/src/: main.rs
examples/epd4in2_full_blue_pill/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
examples/epd4in2_full_blue_pill/.cargo/: config
examples/epd4in2_full_blue_pill/src/: main.rs
examples/epd4in2_var_buffer/src/: main.rs
examples/epd4in2_var_display_buffer/: Cargo.toml
examples/epd4in2_var_display_buffer/src/: main.rs
examples/epd7in5_full/: Cargo.toml
examples/epd7in5_full/src/: main.rs
examples/epd7in5_v2_full/: Cargo.toml
examples/epd7in5_v2_full/src/: main.rs
examples/f3_stm32f30x/: Cargo.toml
examples/f3_stm32f30x/src/: main.rs
examples/stm32f3discovery/: .gbdinit  Cargo.toml  memory.x
examples/stm32f3discovery/.cargo/: config
examples/stm32f3discovery/src/: main.rs
src/: color.rs  drawing.rs  epds.rs  error.rs  graphics.rs  interface.rs  lib.rs  rect.rs  traits.rs
src/drawing/: color.rs  font.rs  mod.rs
src/drawing_old/: font.rs  mod.rs
src/epd12in48b_v2/: command.rs  config.rs  mod.rs
src/epd1in02/: command.rs  constants.rs  mod.rs
src/epd1in54/: graphics.rs  mod.rs
src/epd1in54_v2/: constants.rs  mod.rs
src/epd1in54b/: command.rs  constants.rs  graphics.rs  mod.rs
src/epd1in54c/: command.rs  graphics.rs  mod.rs
src/epd2in13_v2/: command.rs  constants.rs  graphics.rs  mod.rs
src/epd2in13_v3/: constants.rs  mod.rs
src/epd2in13b_v4/: command.rs  mod.rs
src/epd2in13bc/: command.rs  graphics.rs  mod.rs
src/epd2in13bc_v3/: command.rs  graphics.rs  mod.rs
src/epd2in66/: command.rs  graphics.rs  mod.rs
src/epd2in66b/: command.rs  mod.rs
src/epd2in7/: command.rs  constants.rs  mod.rs
src/epd2in7_v2/: mod.rs
src/epd2in7b/: command.rs  constants.rs  graphics.rs  mod.rs
src/epd2in9/: command.rs  constants.rs  graphics.rs  lut.rs  mod.rs
src/epd2in9_v2/: graphics.rs  mod.rs
src/epd2in9b/: command.rs  graphics.rs  mod.rs
src/epd2in9b_v4/: command.rs  mod.rs
src/epd2in9bc/: command.rs  graphics.rs  mod.rs
src/epd2in9d/: command.rs  constants.rs  mod.rs
src/epd3in7/: command.rs  constants.rs  graphics.rs  mod.rs
src/epd4in2/: command.rs  constants.rs  graphics.rs  lut.rs  mod.rs
src/epd4in2bc/: graphics.rs  mod.rs
src/epd5in65f/: command.rs  graphics.rs  mod.rs
src/epd5in83_v2/: command.rs  mod.rs
src/epd5in83b_v2/: graphics.rs  mod.rs
src/epd7in3f/: command.rs  mod.rs
src/epd7in5/: command.rs  graphics.rs  mod.rs
src/epd7in5_hd/: command.rs  graphics.rs  mod.rs
src/epd7in5_v2/: command.rs  graphics.rs  mod.rs
src/epd7in5_v3/: command.rs  graphics.rs  mod.rs
src/epd7in5b_v2/: command.rs  graphics.rs  mod.rs
src/epd7in5bc/: command.rs  graphics.rs  mod.rs
src/interface/: connection_interface.rs  data_interface.rs  mod.rs
src/traits/: connection_interface.rs  mod.rs
src/type_a/: command.rs  constants.rs  mod.rs
