[package]
authors = ["Christoph Groß <caemor@mailbox.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "An embedded-hal based driver for ePaper displays from Waveshare formerly published as eink-waveshare-rs"
documentation = "https://docs.rs/epd-waveshare"
homepage = "https://github.com/caemor/epd-waveshare"
keywords = ["ePaper", "Display", "epd", "eink"]
license = "ISC"
name = "epd-waveshare"
readme = "README.md"
repository = "https://github.com/Caemor/epd-waveshare.git"
version = "0.6.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
embedded-graphics-core = { version = "0.4", optional = true }
embedded-hal = "1.0.0"
bit_field = "0.10.1"

[dev-dependencies]
embedded-graphics = "0.8"
embedded-hal-mock = { version = "0.11", default-features = false, features = [
    "eh1",
] }

[target.'cfg(unix)'.dev-dependencies]
linux-embedded-hal = "0.4.0"

[[example]]
name = "epd1in54_no_graphics"
required-features = ["linux-dev"]

[[example]]
name = "epd2in13_v2"
required-features = ["linux-dev"]

[[example]]
name = "epd2in13bc"
required-features = ["linux-dev"]

[[example]]
name = "epd4in2_variable_size"
required-features = ["linux-dev"]

[[example]]
name = "epd4in2"
required-features = ["linux-dev"]

[features]
# Remove the linux-dev feature to build the tests on non  unix systems
default = ["graphics", "linux-dev", "epd2in13_v3"]

graphics = ["embedded-graphics-core"]
epd2in13_v2 = []
epd2in13_v3 = []
linux-dev = []

# Offers an alternative fast full lut for type_a displays, but the refreshed screen isnt as clean looking
type_a_alternative_faster_lut = []
