[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = ["Christoph Groß <christoph-gross@mailbox.org>"]

[dependencies]

#eink_waveshare_rs = { git = "https://github.com/Caemor/eink-waveshare-rs"}
eink_waveshare_rs = { path = "../../"}

linux-embedded-hal = "0.2.0"

embedded-hal = { version = "0.2.1", features = ["unproven"] }
