[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = ["Christoph Groß <christoph-gross@mailbox.org>"]

[dependencies]

epd-waveshare = { path = "../../", default-features = false, features = ["epd2in9", "graphics"]}

linux-embedded-hal = "0.2.1"

embedded-graphics = "0.4.3"

embedded-hal = { version = "0.2.1", features = ["unproven"] }
