[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = ["Christoph Groß <christoph-gross@mailbox.org>"]

[dependencies]

## The Only difference between this one and the one without default features sizewise seems to be a different .d-file Size (dependencies-file)
#eink_waveshare_rs = { path = "../../"}
eink_waveshare_rs = { path = "../../", default-features = false, features = ["epd4in2", "graphics"]}

linux-embedded-hal = "0.2.0"

# embedded-graphics = "0.4.2"
embedded-graphics = {git = "https://github.com/caemor/embedded-graphics", branch = "master"}

embedded-hal = { version = "0.2.1", features = ["unproven"] }
