[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = [
    "Christoph Groß <christoph-gross@mailbox.org>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition = "2018"

[dependencies]
embedded-graphics = "0.5.2"
embedded-hal = { version = "0.2.2", features = ["unproven"] }
epd-waveshare = { path = "../../", default-features = false, features = ["epd7in5", "graphics"]}
linux-embedded-hal = "0.2.2"
