[package]
name = "f3_stm32f30x"
version = "0.1.0"
authors = ["Christoph Groß <christoph.gross@student.uni-tuebingen.de>"]

[dependencies]
#f3 = "0.6.0"
f3 = "0.5.3"
#cortex-m = {version = "0.5.2"}
cortex-m = {version = "0.4.3"}



eink_waveshare_rs = { git = "https://github.com/Caemor/eink-waveshare-rs", rev = "ba5d44a"}

#eink_waveshare_rs = { path = "../../"}

# only temporary until Digital::InputPin has arrived in f3
#TODO: update to 0.2.1
embedded-hal = { version = "0.1.2", features = ["unproven"] }

# for #no_std
panic-abort = "0.1.1"

# for handling 'language item required, but not found: 'eh_personality' in #no_std
# see https://os.phil-opp.com/freestanding-rust-binary/ for more infos
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"